Updated javadocs